# codex

./: .gitignore  README.md  io.github.ymontenegr.Codex.json  meson.build  meson_options.txt  pyproject.toml  requirements.txt  run.sh
data/: io.github.ymontenegr.Codex.appdata.xml  io.github.ymontenegr.Codex.desktop  meson.build
data/css/: editor-dark.css  editor-light.css
data/icons/hicolor/: index.theme
data/js/: editor.js
data/templates/: analysis.md  article.md  empty.md  meeting.md  readme.md
data/ui/: preferences.ui  window.ui
po/: POTFILES  meson.build
src/: main.py  window.py
src/models/: __init__.py  book.py  chapter.py  document.py  tag.py
src/services/: __init__.py  database.py  exporter.py  graph_service.py  indexer.py  settings.py  storage.py
src/utils/: __init__.py  markdown_parser.py
src/widgets/: __init__.py  backlinks_panel.py  editor.py  graph_view.py  preferences_window.py  search_overlay.py  sidebar.py  splash.py  tag_bar.py  template_dialog.py  toolbar.py
tests/: conftest.py  test_database.py  test_editor_content.py  test_exporter.py  test_indexer.py  test_markdown_parser.py  test_models.py  test_sprint4.py  test_sprint6.py  test_storage.py
